--- a/_posts/2023-04-26-first.md
+++ b/_posts/2023-04-26-first.md
@@ -5,6 +5,4 @@ title:  "첫 포스팅 입니다."
 
 # 블로그 첫 포스팅입니다.
 
-
-
-![1482144621](C:\Code\GithubBlog\LoadWithWater.github.io\images\2023-04-26-first\1482144621.jpg)
+![Breeze Restaurant Late Evening](C:\Code\GithubBlog\LoadWithWater.github.io\images\2023-04-26-first\Breeze Restaurant Late Evening.jpg)
