404 이미지 수정

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-![404notfound](C:\Code\GithubBlog\LoadWithWater.github.io\images\404\404notfound-1683902278118-2.png)
+![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
