--- a/_posts/2023-04-26-first.md
+++ b/_posts/2023-04-26-first.md
@@ -9,6 +9,6 @@ author_profile: false
 
 # 블로그 첫 포스팅입니다.
 
-test text
+[test](https://loadwithwater.github.io/){: .btn .btn--danger} text
 
 ![1482144621]({{site.url}}/images/2023-04-26-first/1482144621.jpg)
