사진 이름 수정

--- a/_posts/2023-04-26-first.md
+++ b/_posts/2023-04-26-first.md
@@ -12,6 +12,6 @@ typora-root-url: ../
 
 [test](https://loadwithwater.github.io/){: .btn .btn--danger} text
 
-![1482144621](/images/2023-04-26-first/1482144621.jpg)
+![santorini](/images/2023-04-26-first/santorini.jpg)
 
 블로그 첫 포스팅입니다.
