--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,3 +6,8 @@ permalink: /404.html
 ---
 
 ![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
+
+<style>
+    img { display : block;
+    margin : auto;}
+</style>
