--- a/_pages/404.md
+++ b/_pages/404.md
@@ -11,3 +11,9 @@ permalink: /404.html
     img { display : block;
     margin : auto;}
 </style>
+
+<script type='javascript'>
+    $(function() {
+        $("header, footer").hide();
+    });
+</script>
