--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
+<!-- ![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
 
 <style>
     img { display : block;
@@ -16,4 +16,7 @@ permalink: /404.html
     $(function() {
         $("header, footer").hide();
     });
-</script>
+</script> -->
+
+
+Sorry, but the page you were trying to view does not exist.
