--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,18 +5,18 @@ sitemap: false
 permalink: /404.html
 ---
 
-<!-- ![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
+![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
 
 <style>
     img { display : block;
-    margin : auto;}
+    margin : none;}
 </style>
 
 <script type='javascript'>
     $(function() {
         $("header, footer").hide();
     });
-</script> -->
+</script>
 
 
-Sorry, but the page you were trying to view does not exist.
+<!-- Sorry, but the page you were trying to view does not exist. -->
