--- a/_pages/404.md
+++ b/_pages/404.md
@@ -14,7 +14,7 @@ permalink: /404.html
 
 <script type='javascript'>
     $(function() {
-        $("header, footer").hide();
+        $("masthead, page__footer").hide();
     });
 </script>
 
