--- a/_pages/404.md
+++ b/_pages/404.md
@@ -9,7 +9,7 @@ permalink: /404.html
 
 <style>
     img { display : block;
-    margin : none;}
+    margin : auto;}
 </style>
 
 <script type='javascript'>
