--- a/_pages/404.md
+++ b/_pages/404.md
@@ -12,11 +12,9 @@ permalink: /404.html
     margin : auto;}
 </style>
 
-<script type='javascript'>
-    $(function() {
-        $("masthead, page__footer").hide();
-    });
-</script>
+#footer warp {
+    display: none;
+}
 
 
 <!-- Sorry, but the page you were trying to view does not exist. -->
