--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-![404notfound]({{site.url}}\images\404\404notfound-1683902278118-2.png)
+![404notfound](G:\GithubBlog\LoadWithWater.github.io\images\404\404notfound.png)
 
 <style>
     img { display : block;
